<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:id="@+id/TitleLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/company"
            android:id="@+id/textView7"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/website"
            android:id="@+id/textView8"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/InstrumentBoxLayout"
        android:layout_below="@+id/TitleLayout"
        android:gravity="bottom">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_weight=".2" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/InstrumentLayout"
            android:gravity="bottom">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="New Button"
                    android:id="@+id/button3"
                    android:layout_weight=".2"
                    android:layout_gravity="right"/>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/meter_label_text"
                        android:id="@+id/textView9" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="-----"
                        android:id="@+id/textView10" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/meter_serial_label_text"
                        android:id="@+id/textView11" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="00:00:00:00:00"
                        android:id="@+id/textView12" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_display_block">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="0000.0"
                    android:id="@+id/flowrateView"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/lcd"
                    android:padding="@dimen/margin_lcd"
                    android:typeface="normal"
                    android:textSize="@dimen/lcd_big_font_size"
                    android:singleLine="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/label1"
                    android:id="@+id/textView"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/labelTextColor"
                    android:background="@color/labelBackgroundColor"
                    android:paddingLeft="@dimen/margin_label_lr"
                    android:paddingRight="@dimen/margin_label_lr" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_display_block">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="000000.0"
                    android:id="@+id/resettableTotalizerView"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/lcd"
                    android:padding="@dimen/margin_lcd"
                    android:width="300dp"
                    android:typeface="normal"
                    android:textSize="@dimen/lcd_small_font_size"
                    android:singleLine="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/label2"
                    android:id="@+id/textView5"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/labelTextColor"
                    android:background="@color/labelBackgroundColor"
                    android:paddingLeft="@dimen/margin_label_lr"
                    android:paddingRight="@dimen/margin_label_lr"  />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reset"
                    android:id="@+id/totalizerResetButton"
                    android:layout_gravity="right" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_display_block">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="000000.0"
                    android:id="@+id/totalizerView"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/lcd"
                    android:padding="@dimen/margin_lcd"
                    android:width="300dp"
                    android:typeface="normal"
                    android:textSize="@dimen/lcd_small_font_size"
                    android:singleLine="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/label3"
                    android:id="@+id/textView6"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/labelTextColor"
                    android:background="@color/labelBackgroundColor"
                    android:paddingLeft="@dimen/margin_label_lr"
                    android:paddingRight="@dimen/margin_label_lr" />
            </LinearLayout>

        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_weight=".2" />

    </LinearLayout>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/config"
        android:id="@+id/configButton"
        android:layout_alignParentBottom="true"/>


</RelativeLayout>