<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/backgroundColor"
    tools:context="com.midwestinstruments.watermeter.MeterActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/floatRate"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="false"
                android:background="@drawable/lcd"
                android:padding="@dimen/margin_lcd"
                android:typeface="normal"
                android:textSize="@dimen/lcd_big_font_size"

                android:layout_alignParentEnd="false"
                android:gravity="center_horizontal"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/label1"
                android:id="@+id/textView"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/labelTextColor"
                android:background="@color/labelBackgroundColor"
                android:paddingLeft="@dimen/margin_label_lr"
                android:paddingRight="@dimen/margin_label_lr" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="GPM"
                android:id="@+id/activity_flow_label"
                android:layout_gravity="right"
                android:textStyle="bold"
                android:layout_marginTop="-35dp"
                android:layout_marginRight="10dp"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/totalizerFlowRate"
                android:layout_below="@+id/floatRate"
                android:layout_alignParentStart="true"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/lcd"
                android:padding="@dimen/margin_lcd"
                android:width="300dp"
                android:typeface="normal"
                android:textSize="@dimen/lcd_small_font_size"
                android:singleLine="true"
                android:gravity="center_horizontal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/label3"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/labelTextColor"
                android:background="@color/labelBackgroundColor"
                android:paddingLeft="@dimen/margin_label_lr"
                android:paddingRight="@dimen/margin_label_lr"  />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Gallons"
                android:id="@+id/activity_total_label"
                android:layout_marginTop="-35dp"
                android:layout_marginRight="10dp"
                android:layout_gravity="right"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/resetFlowRate"
                android:layout_below="@+id/totalizerFlowRate"
                android:layout_alignParentStart="true"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/lcd"
                android:padding="@dimen/margin_lcd"
                android:width="300dp"
                android:typeface="normal"
                android:textSize="@dimen/lcd_small_font_size"
                android:singleLine="true"
                android:gravity="center_horizontal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/label2"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/labelTextColor"
                android:background="@color/labelBackgroundColor"
                android:paddingLeft="@dimen/margin_label_lr"
                android:paddingRight="@dimen/margin_label_lr"  />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Gallons"
                android:id="@+id/textView16"
                android:layout_marginTop="-35dp"
                android:layout_marginRight="10dp"
                android:layout_gravity="right"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"/>

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Reset Total"
                android:id="@+id/resetButton"
                android:layout_below="@+id/resetFlowRate"
                android:layout_alignParentStart="true"
                android:layout_gravity="right"/>

        </LinearLayout>

    </LinearLayout>

    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:id="@+id/progressBar"/>

    <include
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        layout="@layout/manufacturer_info"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>
</RelativeLayout>
